@@ -45,6 +45,7 @@ CONFIG_LOADER_WHEELS=y
 CONFIG_LOADER_NIPPON=y
 CONFIG_LOADER_AR6=y
 CONFIG_LOADER_ELOAD1=y
+CONFIG_LOADER_ULTRABOOT=n
 CONFIG_HARDWARE_VARIANT=100
 CONFIG_HARDWARE_NAME=sd2iec-mbed
 CONFIG_SD_AUTO_RETRIES=10
